--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -74,6 +74,12 @@
           </small>
         </label>
       </form>
+      
+      <button type="button" class="btn btn-sm btn-default text-center col-lg-12 spacing"
+              ng-click="takeScreenshot()" ng-disabled="false">
+        <i class="fa fa-camera"></i>
+        Take screenshot
+      </button>
 
       <form class="form-group form-inline form-group-sm">
         <small class="text-uppercase col-lg-12">Filter by priority:</small>
@@ -133,13 +139,13 @@
 
 <div class="row" ng-show="allRequestData.length">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    
+
     <mcm-customizable-chart chart-type="'mcm-column-chart'" chart-title="Requests chart"
                             radio="requests.radio" settings="requests.settings"
                             selections="requests.selections" options="requests.options"
                             chart-data="allRequestData">
     </mcm-customizable-chart>
-    
+
     <multiple-pie-charts color-domain="piecharts.domain" table-title="Campaigns"
                          data="allRequestData" full-terms="piecharts.fullTerms"
                          compact-terms="piecharts.compactTerms" sum-by="piecharts.sum"
